core/codegen/tests/ui-fail/catch_type_errors.stderr
error[E0277]: the trait bound `usize: rocket::response::Responder<'_>` is not satisfied
 --> $DIR/catch_type_errors.rs:6:30
  |
6 | fn f1(_request: &Request) -> usize {
  |                              ^^^^^ the trait `rocket::response::Responder<'_>` is not implemented for `usize`
  |
  = note: required by `rocket::response::Responder::respond_to`

error[E0277]: the trait bound `bool: rocket::response::Responder<'_>` is not satisfied
  --> $DIR/catch_type_errors.rs:12:30
   |
12 | fn f2(_request: &Request) -> bool {
   |                              ^^^^ the trait `rocket::response::Responder<'_>` is not implemented for `bool`
   |
   = note: required by `rocket::response::Responder::respond_to`

error[E0308]: mismatched types
  --> $DIR/catch_type_errors.rs:17:1
   |
17 | #[catch(404)]
   | ^^^^^^^^^^^^^ expected bool, found reference
   |
   = note: expected type `bool`
              found type `&'_b rocket::Request<'_>`

error[E0277]: the trait bound `usize: rocket::response::Responder<'_>` is not satisfied
  --> $DIR/catch_type_errors.rs:18:26
   |
17 | #[catch(404)]
   | ------------- expected due to this
18 | fn f3(_request: bool) -> usize {
   |                          ^^^^^ the trait `rocket::response::Responder<'_>` is not implemented for `usize`
   |
   = note: required by `rocket::response::Responder::respond_to`

error[E0277]: the trait bound `usize: rocket::response::Responder<'_>` is not satisfied
  --> $DIR/catch_type_errors.rs:24:12
   |
24 | fn f4() -> usize {
   |            ^^^^^ the trait `rocket::response::Responder<'_>` is not implemented for `usize`
   |
   = note: required by `rocket::response::Responder::respond_to`

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
